--- a/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/res/values/strings.xml
+++ b/projeto/v1.2 (APP)/SynesthesiaVision/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Synesthesia Vision</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="dispositivos">Selecione o Dispositivo</string>
+    <string name="seta">seta virada para o lado esquerdo</string>
+    <string name="conectando">Conectando</string>
+    <string name="f_conexao">Falha na Conexão</string>
+    <string name="a_conexao">Conectado</string>
+    <string name="comecar">iniciar a transmissão do som</string>
+    <string name="tempo_sensor">tempo por sensor em milissegundos</string>
+    <string name="tempo_total">tempo total do ciclo</string>
 </resources>
