--- a/Synesthesia_APP/SynesthesiaVision/app/src/main/res/values-pt/strings.xml
+++ b/Synesthesia_APP/SynesthesiaVision/app/src/main/res/values-pt/strings.xml
@@ -26,4 +26,8 @@
         execução do som, tornando-o mais rápido. A frequência máxima é de 1 hertz.
     </string>
     <string name="dispositivos">Dispositivos</string>
+    <string name="a_conexao">Conectado</string>
+    <string name="conectando">Conectando</string>
+    <string name="f_conexao">Falha na Conexão</string>
+
 </resources>
